--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.6",
     "expo": "~47.0.8",
+    "expo-network": "~5.0.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-navigation": "^4.4.4",
-    "expo-network": "~5.0.0"
+    "react-native-gesture-handler": "^2.8.0",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
